Color contrast correction

--- a/style.css
+++ b/style.css
@@ -489,7 +489,8 @@ ul.skills-list li:first-child {
 .work-item:not(:first-child, :nth-of-type(1)) {
   height: 100%;
   object-position: center;
-  background: linear-gradient(
+  background:
+    linear-gradient(
       180.45deg,
       rgba(38, 38, 38, 0) 0.75%,
       rgba(38, 38, 38, 0.9) 61.94%
